feat: thrift menu

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.ReneWear"
         tools:targetApi="31">
         <activity
+            android:name=".SplashScreenActivity"
+            tools:node="replace">
+        </activity>
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
